--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,10 @@
   --popover: hsl(0 0% 100%);
   --popover-foreground: hsl(0 0% 3.9%);
   --primary: hsl(214 99% 35%);
+  --primary-50: hsl(206 100% 97%);
   --primary-200: hsl(214 100% 97%);
   --primary-300: hsl(214 100% 90%);
+  --primary-700: hsl(218 80% 46%);
   --primary-foreground: hsl(0 0% 98%);
   --secondary: hsl(0 0% 96.1%);
   --secondary-foreground: hsl(0 0% 9%);
@@ -45,7 +47,13 @@
   --gray-900: hsl(221 43% 11%);
   --grey: hsl(0 0% 50%);
   --success: hsl(157 59% 40%);
+  --success-50: hsl(144 78% 96%);
+  --success-200: hsl(144 69% 80%);
+  --success-700: hsl(155 91% 24%);
   --success-background: hsl(158 52% 96%);
+  --warning-50: hsl(44 100% 96%);
+  --warning-200: hsl(44 99% 77%);
+  --warning-700: hsl(22 92% 37%);
   --pending: hsl(29 81% 52%);
   --chart-1: hsl(12 76% 61%);
   --chart-2: hsl(173 58% 39%);
@@ -63,8 +71,10 @@
   --color-popover: var(--popover);
   --color-popover-foreground: var(--popover-foreground);
   --color-primary: var(--primary);
+  --color-primary-50: var(--primary-50);
   --color-primary-200: var(--primary-200);
   --color-primary-300: var(--primary-300);
+  --color-primary-700: var(--primary-700);
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
@@ -89,6 +99,12 @@
   --color-gray-700: var(--gray-700);
   --color-gray-900: var(--gray-900);
   --color-success: var(--success);
+  --color-success-50: var(--success-50);
+  --color-success-200: var(--success-200);
+  --color-success-700: var(--success-700);
+  --color-warning-50: var(--warning-50);
+  --color-warning-200: var(--warning-200);
+  --color-warning-700: var(--warning-700);
   --color-success-background: var(--success-background);
   --color-pending: var(--pending);
   --color-chart-1: var(--chart-1);
